# jaeng

./: .clang-format  .editorconfig  .geminiignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  GEMINI.md  LICENSE  README.md  SUBMODULE_INTEGRATION.md  vcpkg.json
apps/sandbox/: CMakeLists.txt  main.cpp  mesh_utils.cpp  mesh_utils.h  sandbox_app.cpp  sandbox_app.h
apps/sandbox/android/: settings.gradle
apps/sandbox/android/app/: build.gradle
apps/sandbox/android/app/src/main/: AndroidManifest.xml
apps/test_server/: CMakeLists.txt  main.cpp
doc/design/: components.md  containers.md  context.md
engine/: CMakeLists.txt
engine/animation/: animation.cpp  animation.h
engine/common/: app_state.cpp  app_state.h  apple_utils.mm  default_assets.cpp  default_assets.h  logging.h  pubsub.h  result.h  triple_buffer.h
engine/common/async/: awaiters.cpp  awaiters.h  task.h  task_scheduler.cpp  task_scheduler.h
engine/common/math/: aabb.h  conventions.h  math.h  ray.h
engine/entity/: entity.h  transform_sys.h
engine/material/: imaterialsys.h  materialsys.cpp  materialsys.h  schema.json
engine/mesh/: imeshsys.h  meshsys.cpp  meshsys.h
engine/platform/android/: android_input.cpp  android_input.h  android_platform.cpp  android_platform.h  android_process.cpp  android_process.h  android_window.cpp  android_window.h  platform.cmake
engine/platform/apple/: apple.cmake  apple_process.cpp  apple_process.h
engine/platform/ios/: ios_platform.h  ios_platform.mm  ios_window.h  ios_window.mm
engine/platform/macos/: macos_platform.h  macos_platform.mm  macos_window.h  macos_window.mm
engine/platform/public/: application.cpp  platform_api.h  process.h
engine/platform/wayland/: platform.cmake  wayland_input.cpp  wayland_input.h  wayland_platform.cpp  wayland_platform.h  wayland_process.cpp  wayland_process.h  wayland_window.cpp  wayland_window.h
engine/platform/win32/: platform.cmake  win32_platform.cpp  win32_platform.h  win32_process.cpp  win32_process.h
engine/render/frontend/: renderer.h
engine/render/graph/: render_graph.h
engine/render/public/: renderer_api.h  renderer_plugin.h
engine/scene/: grid_partition.cpp  grid_partition.h  icamera.h  ipartition.h  perspective_cam.cpp  perspective_cam.h  pipelinecache.h  render_sys.cpp  render_sys.h  scene.cpp  scene.h
engine/storage/: ifstorage.h
engine/storage/win/: filestorage.cpp  filestorage.h
engine/texture/: itexturesys.h  texturesys.cpp  texturesys.h
engine/ui/: fontsys.cpp  fontsys.h  ui.cpp  ui.h  widgets.h
plugins/renderer_d3d12/: CMakeLists.txt  d3d12_bind.cpp  d3d12_bind.h  d3d12_commands.cpp  d3d12_commands.h  d3d12_depthmanager.cpp  d3d12_depthmanager.h  d3d12_descriptors.cpp  d3d12_descriptors.h  d3d12_device.cpp  d3d12_device.h  d3d12_pipeline.cpp  d3d12_pipeline.h  d3d12_renderer.cpp  d3d12_renderer.h  d3d12_renderer_old.cpp  d3d12_resources.cpp  d3d12_resources.h  d3d12_swapchain.cpp  d3d12_swapchain.h  d3d12_upload.cpp  d3d12_upload.h  d3d12_utils.h
plugins/renderer_metal/: CMakeLists.txt  README.md  metal_layer_bridge.h  metal_layer_bridge.mm  metal_renderer.cpp  metal_renderer.h  metal_renderer.mm  metal_utils.h
plugins/renderer_vulkan/: CMakeLists.txt  vulkan_commands.cpp  vulkan_context.h  vulkan_descriptors.cpp  vulkan_descriptors.h  vulkan_device.cpp  vulkan_device.h  vulkan_pipeline.cpp  vulkan_renderer.cpp  vulkan_resources.cpp  vulkan_resources.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_utils.h
shaders/: CMakeLists.txt
shaders/hlsl/basic/: pixel.hlsl  vertex.hlsl
shaders/hlsl/ui/: pixel.hlsl  vertex.hlsl
tools/dxil_reflect/: CMakeLists.txt  dxil_reflect.cpp
tools/spv_reflect/: spv_reflect.py
